force-app/main/default/objects/Interior_Contractor__c/Interior_Contractor__c.object-meta.xml
<CustomObject>
    <label>内装工事店管理</label>
    <nameField>
        <displayFormat>B-{0000000000}</displayFormat>
        <label>内装工事店管理名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>