force-app/main/default/objects/Interior_Contractor__c/fields/BA1_PM__c.field-meta.xml
<CustomField>
    <fullName>BA1_PM__c</fullName>
    <label>BA1部PM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>