force-app/main/default/objects/Interior_Contractor__c/fields/BAStatus__c.field-meta.xml
<CustomField>
    <fullName>BAStatus__c</fullName>
    <label>BA側ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.未着手</fullName>
            </value>
            <value>
                <fullName>1.実行計画提案・策定</fullName>
            </value>
            <value>
                <fullName>2.検証項目確定</fullName>
            </value>
            <value>
                <fullName>3.実証内容確定</fullName>
            </value>
            <value>
                <fullName>4.モデル共有、割付確認</fullName>
            </value>
            <value>
                <fullName>5.発注数量確定</fullName>
            </value>
            <value>
                <fullName>6.実証工事着手済</fullName>
            </value>
            <value>
                <fullName>7.実証工事完了</fullName>
            </value>
            <value>
                <fullName>8.残材測定完了</fullName>
            </value>
            <value>
                <fullName>9.最終報告済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>