force-app/main/default/objects/Interior_Contractor__c/fields/BuildingCStatus__c.field-meta.xml
<CustomField>
    <fullName>BuildingCStatus__c</fullName>
    <label>建材Cステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.未着手</fullName>
            </value>
            <value>
                <fullName>1.BA概要説明＆材料購入了承</fullName>
            </value>
            <value>
                <fullName>2.営業部署へ案件情報共有</fullName>
            </value>
            <value>
                <fullName>3.工事店確認フォーマット記載</fullName>
            </value>
            <value>
                <fullName>4.工事店への案件共有</fullName>
            </value>
            <value>
                <fullName>5.営業部署とBA詳細内容共有</fullName>
            </value>
            <value>
                <fullName>6.工事店へのBA内装説明</fullName>
            </value>
            <value>
                <fullName>7.調書入手＆見積完了</fullName>
            </value>
            <value>
                <fullName>8.営業部署へ発注フロー共有</fullName>
            </value>
            <value>
                <fullName>9.材料納入</fullName>
            </value>
            <value>
                <fullName>10.材料納入完了</fullName>
            </value>
            <value>
                <fullName>11.施工完了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>