force-app/main/default/objects/Interior_Contractor__c/fields/CSCharge__c.field-meta.xml
<CustomField>
    <fullName>CSCharge__c</fullName>
    <label>CS担当</label>
    <length>255</length>
    <type>Text</type>
</CustomField>