force-app/main/default/objects/Interior_Contractor__c/fields/DepartmentC__c.field-meta.xml
<CustomField>
    <fullName>DepartmentC__c</fullName>
    <label>建材C担当部署</label>
    <length>255</length>
    <type>Text</type>
</CustomField>