force-app/main/default/objects/Interior_Contractor__c/fields/ObtainRecords__c.field-meta.xml
<CustomField>
    <fullName>ObtainRecords__c</fullName>
    <label>調書入手</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>入手済</fullName>
            </value>
            <value>
                <fullName>未入手</fullName>
            </value>
            <value>
                <fullName>入手不可</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>