force-app/main/default/objects/Interior_Contractor__c/fields/OppInterior_Contractor__c.field-meta.xml
<CustomField>
    <fullName>OppInterior_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>内装工事店管理</relationshipLabel>
    <relationshipName>OppInterior_Contractor</relationshipName>
    <type>Lookup</type>
</CustomField>