force-app/main/default/objects/Interior_Contractor__c/fields/StrategicPlanningOffice__c.field-meta.xml
<CustomField>
    <fullName>StrategicPlanningOffice__c</fullName>
    <label>戦略企画室担当</label>
    <length>255</length>
    <type>Text</type>
</CustomField>